--- a/poudre-dashboard-ng/src/assets/menuConfig/testConfig1.json
+++ b/poudre-dashboard-ng/src/assets/menuConfig/testConfig1.json
@@ -196,6 +196,11 @@
                    "mapProject": "point_layers_2019-05-15"
                },
                {
+                    "name": "Point Layers - Refresh",
+                    "action": "displayMap",
+                    "mapProject": "point_layers_refresh_2019-05-22"
+               },
+               {
                    "name": "Polygon Layers",
                    "action": "displayMap",
                    "mapProject":"polygon_layers_2019-05-15"
