--- a/poudre-dashboard-ng/package.json
+++ b/poudre-dashboard-ng/package.json
@@ -19,10 +19,14 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@types/jquery": "^3.3.29",
+    "@asymmetrik/ngx-leaflet": "^5.0.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
-    "jquery": "^3.4.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "leaflet": "^1.5.1",
+    "leaflet-sidebar": "^0.2.0",
+    "ngx-bootstrap": "^4.2.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
@@ -35,6 +39,7 @@
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.29",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
