--- a/poudre-dashboard-ng/angular.json
+++ b/poudre-dashboard-ng/angular.json
@@ -28,11 +28,13 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/leaflet-sidebar-v2/css/leaflet-sidebar.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
-              "node_modules/bootstrap/dist/js/bootstrap.js"
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.js"
             ],
             "es5BrowserSupport": true
           },
