--- a/poudre-dashboard-ng/package.json
+++ b/poudre-dashboard-ng/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.4.1",
     "leaflet": "^1.5.1",
     "leaflet-sidebar": "^0.2.0",
+    "leaflet-sidebar-v2": "^3.1.1",
     "ngx-bootstrap": "^4.2.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
