--- a/poudre-dashboard-ng/angular.json
+++ b/poudre-dashboard-ng/angular.json
@@ -27,14 +27,20 @@
             ],
             "styles": [
               "src/styles.css",
+              "src/assets/leaflet/css/L.Control.MousePosition.css",
+              "src/assets/leaflet/css/leaflet.zoomhome.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/leaflet/dist/leaflet.css",
               "node_modules/leaflet-sidebar-v2/css/leaflet-sidebar.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
               "node_modules/bootstrap/dist/js/bootstrap.js",
-              "node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.js"
+              "node_modules/leaflet/dist/leaflet.js",
+              "node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.js",
+              "src/assets/leaflet/javascript/leaflet.zoomhome.min.js",
+              "src/assets/leaflet/javascript/L.Control.MousePosition.js"
             ],
             "es5BrowserSupport": true
           },
