stable version of tabs in nav bar, in middle of restructuring tabs

--- a/poudre-dashboard-ng/src/assets/map-configuration-files/map-tabs-configuration.json
+++ b/poudre-dashboard-ng/src/assets/map-configuration-files/map-tabs-configuration.json
@@ -206,6 +206,10 @@
                    "mapProject":"polygon_layers_2019-05-15"
                }
            ]
+       },
+       {
+           "id": "Tab",
+           "name": "Tab"
        }
    ]
 }
