--- a/poudre-dashboard-ng/angular.json
+++ b/poudre-dashboard-ng/angular.json
@@ -39,6 +39,7 @@
               "node_modules/bootstrap/dist/js/bootstrap.js",
               "node_modules/leaflet/dist/leaflet.js",
               "node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.js",
+              "node_modules/showdown/dist/showdown.min.js",
               "src/assets/leaflet/javascript/leaflet.zoomhome.min.js",
               "src/assets/leaflet/javascript/L.Control.MousePosition.js"
             ],
