--- a/poudre-dashboard-ng/package.json
+++ b/poudre-dashboard-ng/package.json
@@ -30,6 +30,7 @@
     "ngx-bootstrap": "^4.2.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
+    "showdown": "^1.9.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -42,7 +43,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.29",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.10.49",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
