fixed issue with refresh breaking map

--- a/poudre-dashboard-ng/angular.json
+++ b/poudre-dashboard-ng/angular.json
@@ -21,9 +21,12 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-
-              "src/env.js"
-              
+              "src/env.js",
+              {
+                "glob":"**/*",
+                "input": "node_modules/leaflet/dist/images",
+                "output": "leaflet/"
+              }
             ],
             "styles": [
               "src/styles.css",
