--- a/poudre-dashboard-ng/package.json
+++ b/poudre-dashboard-ng/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
+    "@types/leaflet": "^1.4.4",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
