added options to create map link directly on a tab without needing any dropdowns

--- a/poudre-dashboard-ng/src/assets/map-configuration-files/map-tabs-configuration.json
+++ b/poudre-dashboard-ng/src/assets/map-configuration-files/map-tabs-configuration.json
@@ -216,8 +216,16 @@
        {
            "id": "Tab",
            "name": "About the Project",
+           "action": "genericPage",
            "align": "right",
            "markdownFile":"about-the-project"
+       },
+       {
+           "id": "Tab",
+           "name": "MapLink",
+           "action": "displayMap",
+           "align":"right",
+           "mapProject": "line_layers_2019-05-15"
        }
    ]
 }
