--- a/poudre-dashboard-ng/angular.json
+++ b/poudre-dashboard-ng/angular.json
@@ -41,7 +41,9 @@
               "node_modules/jquery/dist/jquery.js",
               "node_modules/bootstrap/dist/js/bootstrap.js",
               "node_modules/leaflet/dist/leaflet.js",
+              "node_modules/leaflet-svg-shape-markers/dist/leaflet-svg-shape-markers.min.js",
               "node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.js",
+              "node_modules/rainbowvis.js/rainbowvis.js",
               "node_modules/showdown/dist/showdown.min.js",
               "src/assets/leaflet/javascript/leaflet.zoomhome.min.js",
               "src/assets/leaflet/javascript/L.Control.MousePosition.js"
