--- a/poudre-dashboard-ng/package.json
+++ b/poudre-dashboard-ng/package.json
@@ -28,8 +28,10 @@
     "leaflet": "^1.5.1",
     "leaflet-sidebar": "^0.2.0",
     "leaflet-sidebar-v2": "^3.1.1",
+    "leaflet-svg-shape-markers": "^1.1.1",
     "ngx-bootstrap": "^4.2.0",
     "popper.js": "^1.15.0",
+    "rainbowvis.js": "^1.0.1",
     "rxjs": "~6.3.3",
     "showdown": "^1.9.0",
     "tslib": "^1.9.0",
