--- a/poudre-dashboard-ng/src/assets/map-configuration-files/map-tabs-configuration.json
+++ b/poudre-dashboard-ng/src/assets/map-configuration-files/map-tabs-configuration.json
@@ -210,6 +210,11 @@
                    "name": "Polygon Layers",
                    "action": "displayMap",
                    "mapProject":"polygon_layers_2019-05-15"
+               },
+               {
+                   "name": "Point Layers - Symbols",
+                   "action": "displayMap",
+                   "mapProject": "point_layers_symbols_2019-07-12"
                }
            ]
        },
