--- a/poudre-dashboard-ng/src/assets/map-configuration-files/map-tabs-configuration.json
+++ b/poudre-dashboard-ng/src/assets/map-configuration-files/map-tabs-configuration.json
@@ -231,6 +231,13 @@
            "action": "displayMap",
            "align":"right",
            "mapProject": "line_layers_2019-05-15"
-       }
+       },
+       {
+        "id": "Testing Tab",
+        "name": "Tesing Link",
+        "action": "displayMap",
+        "align":"right",
+        "mapProject": "line_layers_2019-05-15"
+    }
    ]
 }
