Changed to new remote repo

--- a/poudre-dashboard-ng/src/assets/map-configuration-files/map-tabs-configuration.json
+++ b/poudre-dashboard-ng/src/assets/map-configuration-files/map-tabs-configuration.json
@@ -1,5 +1,5 @@
 {
-   "title" : "Poudre Basin Information",
+   "title" : "Old Poudre Basin Information",
    "mainMenu" : [
         {
           "id": "BasinEntities",
