--- a/poudre-dashboard-ng/package.json
+++ b/poudre-dashboard-ng/package.json
@@ -1,6 +1,7 @@
 {
   "name": "poudre-dashboard-ng",
-  "version": "0.0.0",
+  "version": "0.7.0.dev",
+  "versionDate": "2020-04-21",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -24,6 +25,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "handlebars": "^4.7.6",
     "jquery": "^3.4.1",
     "leaflet": "^1.5.1",
     "leaflet-sidebar": "^0.2.0",
@@ -34,7 +36,6 @@
     "rainbowvis.js": "^1.0.1",
     "rxjs": "~6.3.3",
     "showdown": "^1.9.1",
-    "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -57,6 +58,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+    "tslib": "^1.11.1",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
   }
