Reverted package.json back and created version.json

--- a/poudre-dashboard-ng/src/assets/map-configuration-files/map-tabs-configuration.json
+++ b/poudre-dashboard-ng/src/assets/map-configuration-files/map-tabs-configuration.json
@@ -1,5 +1,5 @@
 {
-  "title" : "New Poudre Basin Information",
+  "title" : "Poudre Basin Information",
   "mainMenu" : [
     {
       "id": "BasinEntities",
