--- a/poudre-dashboard-ng/package.json
+++ b/poudre-dashboard-ng/package.json
@@ -32,6 +32,7 @@
     "leaflet-sidebar-v2": "^3.2.0",
     "leaflet-svg-shape-markers": "^1.1.1",
     "ngx-bootstrap": "^4.2.0",
+    "papaparse": "^5.2.0",
     "popper.js": "^1.15.0",
     "rainbowvis.js": "^1.0.1",
     "rxjs": "~6.3.3",
