Update scripts and angular.json to use new info-mapper name, issue #70

--- a/info-mapper/angular.json
+++ b/info-mapper/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "poudre-dashboard-ng": {
+    "info-mapper": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/poudre-dashboard-ng",
+            "outputPath": "dist/info-mapper",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -80,18 +80,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "poudre-dashboard-ng:build"
+            "browserTarget": "info-mapper:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "poudre-dashboard-ng:build:production"
+              "browserTarget": "info-mapper:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "poudre-dashboard-ng:build"
+            "browserTarget": "info-mapper:build"
           }
         },
         "test": {
@@ -125,7 +125,7 @@
         }
       }
     },
-    "poudre-dashboard-ng-e2e": {
+    "info-mapper-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -134,11 +134,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "poudre-dashboard-ng:serve"
+            "devServerTarget": "info-mapper:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "poudre-dashboard-ng:serve:production"
+              "devServerTarget": "info-mapper:serve:production"
             }
           }
         },
@@ -154,5 +154,5 @@
       }
     }
   },
-  "defaultProject": "poudre-dashboard-ng"
+  "defaultProject": "info-mapper"
 }
