--- a/info-mapper/package.json
+++ b/info-mapper/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "poudre-dashboard-ng",
+  "name": "info-mapper",
   "version": "0.0.0",
   "versionDate": "2020-04-21",
   "scripts": {
